[package]
name = "crab-dl"
version = "0.1.0"
edition = "2024"

[dependencies]
clap = { version = "4.5", features = ["derive"] }
egui = "0.33.2"
egui_extras = { version = "*", features = ["all_loaders"] }
eframe = "0.33.2"
image = { version = "0.25", features = ["png"] }
indicatif = "0.18.3"
reqwest = { version = "0.12.24", features = ["blocking"] } 
rayon = "1.11.0"
