[package]
name = "crab-dl"
version = "0.1.0"
edition = "2024"

[dependencies]
clap = { version = "4.5", features = ["derive"] }
dirs = "6.0.0"
eframe = "0.33.2"
egui = "0.33.2"
egui_extras = { version = "*", features = ["all_loaders"] }
image = { version = "0.25", features = ["png"] }
indicatif = "0.18.3"
rayon = "1.11.0"
reqwest = { version = "0.12.24", features = ["blocking"] } 
rfd = "0.15.4"
